--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/carousel/#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link disabled" href="./">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/carousel/#">Link</a>
+                            <a class="nav-link" href="./gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="https://getbootstrap.com/docs/4.3/examples/carousel/#">Disabled</a>
+                            <a class="nav-link" href="./about">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio">Portfolio</a>
                         </li>
                     </ul>
 <!--                    <form class="form-inline mt-2 mt-md-0">
@@ -79,8 +82,8 @@
                         <img src="./img/3.jpg" alt="1"/>
                         <div class="container">
                             <div class="carousel-caption text-left">
-                                <h1>Example headline.</h1>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                <h1>Parties.</h1>
+                                <p>We can make your party come to life and be as memorable as can be.</p>
                                 <p><a class="btn btn-lg btn-primary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">Sign up today</a></p>
                             </div>
                         </div>
@@ -90,8 +93,8 @@
                         <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"></rect></svg>-->
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                <h1>Weddings.</h1>
+                                <p>A wedding is a milestone occasion in your life and the utmost care should be taken that everything goes as planned.</p>
                                 <p><a class="btn btn-lg btn-primary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">Learn more</a></p>
                             </div>
                         </div>
@@ -101,18 +104,18 @@
                         <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"></rect></svg>-->
                         <div class="container">
                             <div class="carousel-caption text-right">
-                                <h1>One more for good measure.</h1>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                <h1>Special Occasions.</h1>
+                                <p>Whatever the occasion, our attention to detail and creativity can bring your ideas to life.</p>
                                 <p><a class="btn btn-lg btn-primary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">Browse gallery</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="https://getbootstrap.com/docs/4.3/examples/carousel/#myCarousel" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="https://getbootstrap.com/docs/4.3/examples/carousel/#myCarousel" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -128,20 +131,20 @@
                 <!-- Three columns of text below the carousel -->
                 <div class="row">
                     <div class="col-lg-4">
-                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-                        <h2>Heading</h2>
+                        <img src="./img/services.jpg" alt="services"/>
+                        <h2>Services</h2>
                         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">View details »</a></p>
                     </div><!-- /.col-lg-4 -->
                     <div class="col-lg-4">
-                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-                        <h2>Heading</h2>
+                        <img src="./img/about.jpg" alt="about us"/>
+                        <h2>About Us</h2>
                         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">View details »</a></p>
                     </div><!-- /.col-lg-4 -->
                     <div class="col-lg-4">
-                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-                        <h2>Heading</h2>
+                        <img src="./img/portfolio.jpg" alt="portfolio"/>
+                        <h2>Portfolio</h2>
                         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
                         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.3/examples/carousel/#" role="button">View details »</a></p>
                     </div><!-- /.col-lg-4 -->
